force-app/main/default/objects/Auth0OIDCAuthProvider__mdt/Auth0OIDCAuthProvider__mdt.object-meta.xml
<CustomObject>
    <description>Stores the setting related to any OIDC providers connecting to Auth0</description>
    <label>Auth0 OIDC Auth Provider</label>
    <pluralLabel>Auth0 OIDC Auth Providers</pluralLabel>
</CustomObject>