force-app/main/default/objects/Auth0OIDCAuthProvider__mdt/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>The audience url. This can be left blank if it is unknown. The impact of this is that an opaque access token will be returned during token exchange which may limit the tokens use throughout the Post API ecosystem. Specifying a valid audience will cause a JWT access token to be returned. The opaque token will usually only work with the userinfo endpoint.</description>
    <inlineHelpText>The audience url. This can be left blank if it is unknown. The impact of this is that an opaque access token will be returned during token exchange which may limit the tokens use throughout the Post API ecosystem.</inlineHelpText>
    <label>Audience</label>
    <length>150</length>
    <type>Text</type>
</CustomField>