force-app/main/default/objects/Auth0OIDCAuthProvider__mdt/fields/ExternalCredentialName__c.field-meta.xml
<CustomField>
    <fullName>ExternalCredentialName__c</fullName>
    <description>Stores the name of the external credential linked to the named credential used in the token/authorise/userinfo endpoints. Unfortunately, this information is not implicit, so the name needs to be specified.</description>
    <inlineHelpText>Stores the name of the external credential linked to the named credential used in the token/authorise/userinfo endpoints. Unfortunately, this information is not implicit, so the name needs to be specified.</inlineHelpText>
    <label>External Credential Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>