force-app/main/default/objects/Auth0OIDCAuthProvider__mdt/fields/PKCEEncryptionKey__c.field-meta.xml
<CustomField>
    <fullName>PKCEEncryptionKey__c</fullName>
    <description>Stores the name of the custom settings record linked for the AusPost Settings. This is used as key in the Auth0OIDCAuthProvider apex class to retrieve the stored base64 value of the output of Crypto.generateAesKey(256) from the custom settings.</description>
    <inlineHelpText>Stores the name of the custom settings record linked for the AusPost Settings. This is used as key in the Auth0OIDCAuthProvider apex class to retrieve the stored base64 value of the output of Crypto.generateAesKey(256) from the custom settings.</inlineHelpText>
    <label>PKCE Encryption Key</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>