force-app/main/default/objects/Auth0OIDCAuthProvider__mdt/fields/PKCESigningCertAPIName__c.field-meta.xml
<CustomField>
    <fullName>PKCESigningCertAPIName__c</fullName>
    <description>This is the name of the certificate to generate PKCE challenge/verifier responses. This can be any certificate (even if it&apos;s expired!). The encrypted value of the state is subsequently hashed and used as a challenger for PKCE flow. There is no security issue in using an expired cert either as it&apos;s not necessary verify the integrity of the hashed value downstream or anywhere else</description>
    <inlineHelpText>This is the name of the certificate to generate PKCE challenge/verifier responses. This can be any certificate (even if it&apos;s expired!). The encrypted value of the state is subsequently hashed and used as a challenger for PKCE flow. There is no security issue in using an expired cert either as it&apos;s not necessary verify the integrity of the hashed value downstream or anywhere else</inlineHelpText>
    <label>PKCE Signing Cert API Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>