force-app/main/default/objects/Auth0OIDCAuthProvider__mdt/fields/TokenEndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>TokenEndpointUrl__c</fullName>
    <description>Token Endpoint for Auth0 Application</description>
    <inlineHelpText>Token Endpoint for Auth0 Application</inlineHelpText>
    <label>Token Endpoint Url</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>