force-app/main/default/objects/Auth0OIDCAuthProvider__mdt/fields/URLSuffix__c.field-meta.xml
<CustomField>
    <fullName>URLSuffix__c</fullName>
    <description>This is a duplicate of the standard URL Suffix field. It exists simply because the standard field isn&apos;t available in the Auth.AuthProviderPluginClass implementation. It must have the same value as the standard URL Suffix field</description>
    <inlineHelpText>This is a duplicate of the standard URL Suffix field. It exists simply because the standard field isn&apos;t available in the Auth.AuthProviderPluginClass implementation. It must have the same value as the standard URL Suffix field</inlineHelpText>
    <label>URL Suffix</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>