force-app/main/default/objects/Auth0OIDCAuthProvider__mdt/fields/UserInfoEndpointUrl__c.field-meta.xml
<CustomField>
    <fullName>UserInfoEndpointUrl__c</fullName>
    <description>UserInfo Endpoint Url for Auth0 Application</description>
    <inlineHelpText>UserInfo Endpoint Url for Auth0 Application</inlineHelpText>
    <label>UserInfo Endpoint Url</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>